--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL=http://localhost:5000/api
+VITE_REDDIT_CLIENT_ID=MKgEEtdN2M1NXnZn-VtVbA
+VITE_REDIRECT_URI=http://localhost:5173/reddit-callback
