removed locahost api

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_API_BASE_URL=https://creator-dashboard-458097596190.us-central1.run.app/api
 VITE_REDDIT_CLIENT_ID=MKgEEtdN2M1NXnZn-VtVbA
-VITE_REDDIT_REDIRECT_URI=http://localhost:5173/reddit-callback
+VITE_REDDIT_REDIRECT_URI==https://creator-dashboard-458097596190.us-central1.run.app/reddit-callback
